# jsm-compare

./: LICENSE  README.md  pyproject.toml
src/jsm_compare/: __init__.py  api.py  cli.py  compare.py  normalize.py
