[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsm-compare"
version = "0.1.1"
description = "Compare JSM automation rules and workflows between Jira Cloud environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kotaro Takayama" },
]
keywords = ["jira", "jsm", "automation", "comparison", "atlassian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
jsm-compare = "jsm_compare.cli:cli"

[project.urls]
Homepage = "https://github.com/nyankotaro/jsm-compare"
